Added ability to change name (with name validation!)

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -15,7 +15,9 @@ h1 Chipotle
           .icon
           .text Add to Mobile Site
     .widget-editor
-      h1 Click a widget icon in the Emulator to begin editing
-      h2 OR
-      h1 Drag an icon from the Sidebar to the Emulator
+      h1 Click an icon
+      h2 in the Emulator to begin editing
+      h3 OR
+      h1 Drag an icon
+      h2 from the Sidebar to the Emulator
     .clearfix
