--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -48,6 +48,20 @@
   .widget-name
     padding: 0 0 0 72px
     font-size: 2.5em
+    .change-label
+      display: none
+      padding-left: 8px
+      color: #FF530D
+      font-size: 0.4em
+    &:hover
+      background: $highlight-color
+      cursor: pointer
+      .change-label
+        display: inline
+  .widget-name-edit
+    display: none
+    input[type=text]
+      font-size: 2.5em
 
 #emulator .loader-overlay
   position: absolute
