Added google maps widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -64,6 +64,12 @@ bdata = {
     name: "hours-of-operation",
     wtype: 'hours',
     helpText: "Let your customers know when you're open for business."
+  },
+  
+  "gmap": {
+    name: "find-us",
+    wtype: 'gmap',
+    helpText: "Show your customers a map of where your business is located."
   }
 }
 
