--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -84,3 +84,10 @@ body
   .all-day
     color: #000099
 
+#widget .content.gmap
+  h1, p
+    padding-left: 4px
+  .maps
+    text-align: center
+    .map-link
+      margin: 10px 0
