Added coupon widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -70,6 +70,12 @@ bdata = {
     name: "find-us",
     wtype: 'gmap',
     helpText: "Show your customers a map of where your business is located."
+  },
+  
+  "coupon": {
+    name: "coupon",
+    wtype: 'coupon',
+    helpText: "Give your customers an incentive to choose your business."
   }
 }
 
