Added calendar widget

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -76,6 +76,12 @@ bdata = {
     name: "coupon",
     wtype: 'coupon',
     helpText: "Give your customers an incentive to choose your business."
+  },
+  
+  "calendar": {
+    name: "event-calendar",
+    wtype: 'calendar',
+    helpText: "Keep your customers up-to-date on your business's events."
   }
 }
 
