--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -165,6 +165,11 @@
   .day-hours.checked
     display: block
 
+#builder .edit-area.calendar
+  .url
+    padding: 5px 0 20px
+    font-size: 1.5em
+    word-wrap: break-word
 
 /* css for timepicker */
 #ui-datepicker-div
