Optimized widget order updating

--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -32,5 +32,8 @@ html
         new MobileAppController();
         Backbone.history.start();
         
-        mapp.widgets.fetch();
+        mapp.fetchWorder(function (worderDoc) {
+          mapp.worder = worderDoc.worder;
+          mapp.widgets.fetch();
+        });
       });
