--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -82,6 +82,12 @@ bdata = {
     name: "event-calendar",
     wtype: 'calendar',
     helpText: "Keep your customers up-to-date on your business's events."
+  },
+  
+  "category": {
+    name: "restaurant-menu",
+    wtype: 'category',
+    helpText: "Give your customers instant access to your restaurant's cuisine."
   }
 }
 
