--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -163,6 +163,9 @@
   font-size: 1.5em;
   word-wrap: break-word; }
 
+#builder .edit-area.category select {
+  width: 97%; }
+
 /* css for timepicker */
 #ui-datepicker-div {
   border: 3px solid black; }
