--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -171,6 +171,10 @@
     font-size: 1.5em
     word-wrap: break-word
 
+#builder .edit-area.category
+  select
+    width: 97%
+
 /* css for timepicker */
 #ui-datepicker-div
   border: 3px solid #000
