--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -64,6 +64,7 @@
         | <% if(_maybe.error) { %>
         p.error Error: {{ _maybe.error }}
         | <% } %>
+        p (Press Enter to add)
         .other-names
     	    b Other Sub-Category names being used in this category:
     	    ul
