Category items can now be added again

--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -175,6 +175,12 @@
   select
     width: 97%
 
+#dialog-confirm
+  .error
+    color: #880000
+  .success
+    color: #008800
+
 /* css for timepicker */
 #ui-datepicker-div
   border: 3px solid #000
