--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -99,23 +99,34 @@
   
   script.restaurant-menu-item-dialog(type="text/template")
     #dialog-confirm title="Name your Item"
-      p
-        | Please enter your Menu Item:
-        label Name
-        input type="text" value="{{ _maybe.name }}" name="name"
-        label Price
-        input type="text" value="{{ _maybe.price }}" name="price"
-        label Short Description
-        input type="text" value="{{ _maybe.desc }}" name="desc"
-        | <% if(_maybe.error) { %>
-        p.error Error: {{ _maybe.error }}
-        | <% } %>
-        .other-names
-    	    b Other Menu Item names being used in this category:
-    	    ul
-      	    | <% for(var i=0; i < _items.length; i++) { %>
-      	    |    <li> {{ _items[i].name }} </li>
-      	    |  <% } %>
+      p Please enter your Menu Item:
+      label Name
+      br
+      input.item-input type="text" value="{{ _maybe.name }}" name="name"
+      br
+      label Price
+      br
+      input.item-input type="text" value="{{ _maybe.price }}" name="price"
+      br
+      label Short Description
+      br
+      textarea.item-input name="desc" {{ _maybe.desc }}
+      br
+      
+      | <% if(flash.error) { %>
+      p.error Error: {{ flash.error }}
+      | <% } if(flash.success) { %>
+      p.success {{ flash.success }}
+      | <% } %>
+      
+      | <% if(_items.length > 0) { %>
+      .other-names
+        b Other Menu Item names being used in this category:
+        ul
+          | <% for(var i=0; i < _items.length; i++) { %>
+          |    <li> {{ _items[i].name }} </li>
+          |  <% } %>
+      | <% } %>
 
   / =====================
   / = Widget Show Pages =
