--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -166,6 +166,11 @@
 #builder .edit-area.category select {
   width: 97%; }
 
+#dialog-confirm .error {
+  color: #880000; }
+#dialog-confirm .success {
+  color: #008800; }
+
 /* css for timepicker */
 #ui-datepicker-div {
   border: 3px solid black; }
