Categories can now be reordered

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -276,6 +276,9 @@
     input type="button" name="add_cat" value="Add Sub-Category"
     input type="button" name="edit_cat" value="Edit"
     input type="button" name="rem_cat" value="Remove Sub-Category"
+    br
+    input type="button" name="up_cat" data-mod="-1" value="Move Up"
+    input type="button" name="down_cat" data-mod="1" value="Move Down"
 
     br
     br
