Items can now be rearranged

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -293,3 +293,6 @@
     input type="button" name="add_item" value="Add Item"
     input type="button" name="edit_item" value="Edit Item"
     input type="button" name="rem_item" value="Remove Item"
+    br
+    input type="button" name="up_item" data-mod="-1" value="Move Up"
+    input type="button" name="down_item" data-mod="1" value="Move Down"
