Singletons are now removed from sidebar upon adding

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -87,7 +87,8 @@ bdata = {
   "category": {
     name: "restaurant-menu",
     wtype: 'category',
-    helpText: "Give your customers instant access to your restaurant's cuisine."
+    helpText: "Give your customers instant access to your restaurant's cuisine.",
+    singleton: true
   }
 }
 
