Mobile emulator goes home when removing restaurant menu widget

--- a/app/views/shared/_mobile-render.haml
+++ b/app/views/shared/_mobile-render.haml
@@ -5,7 +5,7 @@
       .name
     .clearfix
     #home-widgets.content.dbx-group
-  #widget.page
+  .page
     .top-bar
       .back-btn
     .content
