Page tree widget now renders correctly

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -89,6 +89,12 @@ bdata = {
     wtype: 'category',
     helpText: "Give your customers instant access to your restaurant's cuisine.",
     singleton: true
+  },
+  
+  "page_tree": {
+    name: "category",
+    wtype: 'page_tree',
+    helpText: "Customize your own mobile site map of pages."
   }
 }
 
