--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -93,12 +93,12 @@ body
     .map-link
       margin: 10px 0
 
-.page .content.category
+.page .content.category, .page .content.page_tree
   padding: 0
   .item
     padding: 8px 0 8px 12px
     font-size: 18px
-  .item.category
+  .item.category, .item.leaf-name
     cursor: pointer
   .c0
     background: #fff
