Generic category pages are now updated in real time.

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -94,7 +94,7 @@ bdata = {
   "page_tree": {
     name: "category",
     wtype: 'page_tree',
-    helpText: "Customize your own mobile site map of pages."
+    helpText: "Create your own mobile site map of custom pages."
   }
 }
 
