--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -171,7 +171,7 @@
     font-size: 1.5em
     word-wrap: break-word
 
-#builder .edit-area.category
+#builder .edit-area.category, #builder .edit-area.page_tree
   select
     width: 97%
 
