--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -163,7 +163,7 @@
   font-size: 1.5em;
   word-wrap: break-word; }
 
-#builder .edit-area.category select {
+#builder .edit-area.category select, #builder .edit-area.page_tree select {
   width: 97%; }
 
 #dialog-confirm .error {
