Widgets can no longer be added unless the mobile emulator is in its home screen.

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -93,6 +93,12 @@
       .top-bar
         .back-btn
       .content
+  
+  #dialog-invalid-drag title="Oops"
+    p
+      span.ui-icon.ui-icon-alert style="float:left"
+      | New widgets can only be added to the mobile home screen.
+    p Please return to the mobile home screen and try adding again.
 
   / =============================
   / = Category Add-Item Dialogs =
