--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -104,3 +104,12 @@ body
     background: #fff
   .c1
     background: $highlight-color
+  .subcat-arrow, .leaf-arrow
+    float: right
+    width: 29px
+    height: 29px
+    margin-top: -4px
+  .subcat-arrow
+    background: url(/images/ui/subcat-arrow.png)
+  .leaf-arrow
+    background: url(/images/ui/leaf-arrow.png)
