--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -92,3 +92,12 @@ body {
     background: white; }
   .page .content.category .c1, .page .content.page_tree .c1 {
     background: #d8dfea; }
+  .page .content.category .subcat-arrow, .page .content.category .leaf-arrow, .page .content.page_tree .subcat-arrow, .page .content.page_tree .leaf-arrow {
+    float: right;
+    width: 29px;
+    height: 29px;
+    margin-top: -4px; }
+  .page .content.category .subcat-arrow, .page .content.page_tree .subcat-arrow {
+    background: url(/images/ui/subcat-arrow.png); }
+  .page .content.category .leaf-arrow, .page .content.page_tree .leaf-arrow {
+    background: url(/images/ui/leaf-arrow.png); }
