--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -172,6 +172,7 @@
     word-wrap: break-word
 
 #builder .edit-area.category, #builder .edit-area.page_tree
+  padding-top: 0
   select
     width: 97%
 
