--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -66,21 +66,18 @@ body {
   #content h1 {
     padding-left: 10px; }
 
-#emulator-wrapper {
-  float: left;
-  width: 320px;
-  height: 480px;
-  padding: 133px 28px 133px 40px;
-  background: url(/images/iphone.png); }
-
 #emulator {
   float: left;
   border: 4px solid #1d4088;
   background: #edeff4; }
 
+#emulator-scroller {
+  width: 335px;
+  height: 480px; }
+
 #emulator.portrait {
   width: 320px;
-  height: 480px; }
+  min-height: 480px; }
 
 #emulator.landscape {
   width: 480px;
