--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -76,7 +76,7 @@
   display: none;
   position: absolute;
   width: 320px;
-  height: 480px;
+  height: 100%;
   background: url(/images/ui/overlay.png); }
   #emulator .drophover-overlay .icon {
     width: 128px;
