--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -68,21 +68,18 @@ body
   h1
     padding-left: 10px
 
-#emulator-wrapper
-  float: left
-  width: $emulator-width
-  height: 480px
-  padding: 133px 28px 133px 40px
-  background: url(/images/iphone.png)
-
 #emulator
   float: left
   border: 4px solid #1D4088
   background: $light-bg-color
 
+#emulator-scroller
+  width: 335px
+  height: 480px
+
 #emulator.portrait
   width: $emulator-width
-  height: 480px
+  min-height: 480px
 
 #emulator.landscape
   width: 480px
