--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -78,7 +78,7 @@
   display: none
   position: absolute
   width: 320px
-  height: 480px
+  height: 100%
   background: url(/images/ui/overlay.png)
   .icon
     width: 128px
