Page tree now renders markdown instead of plain text

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -49,3 +49,6 @@ html
     = javascript_include_tag 'views/sidebar'
     = javascript_include_tag 'mobile-app'
     = javascript_include_tag 'builder-app'
+    
+    = javascript_include_tag 'support/showdown.js'
+    = javascript_include_tag 'support/wmd.js'
